--- a/server/config.env
+++ b/server/config.env
@@ -9,8 +9,8 @@ MONGODB_URI=mongodb://localhost:27017/eduvillage
 # For MongoDB Atlas, use:
 # MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/eduvillage?retryWrites=true&w=majority
 
-# JWT Configuration (for future authentication)
-JWT_SECRET=your_super_secret_jwt_key_here
+# JWT Configuration
+JWT_SECRET=eduvillage_jwt_secret_key_change_this_in_production_123456789
 JWT_EXPIRE=30d
 
 # CORS Configuration
