--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "helmet": "^6.0.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.0",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20",
